--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,17 @@
   --button-color-secondary-one: #3cd9bd;
   --button-color-secondary-two: #d07176;
 }
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: none;
+}
+
+::-webkit-scrollbar-track {
+  background-color: none;
+}
 * {
   margin: 0;
   padding: 0;
